--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,6 +1,7 @@
+
 # H2 datasource configurations
-spring.datasource.url=jdbc:h2:mem:default
-spring.datasource.username=test
+spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.show-sql=true
