--- a/src/main/resources/application_for_github.properties
+++ b/src/main/resources/application_for_github.properties
@@ -1,4 +1,6 @@
-#datasource configurations
+spring.config.name=application, application-test
+spring.config.location=classpath:/, classpath:/
+# Mysql datasource configurations
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/hrm_rest_api?useUnicode=true
 spring.datasource.username=
 spring.datasource.password=
